profile edit height issue fixed on safari

--- a/src/app/modules/blockchain/marketing/spotcoins/spotcoins.component.scss
+++ b/src/app/modules/blockchain/marketing/spotcoins/spotcoins.component.scss
@@ -142,3 +142,9 @@
 .btn--token-buy{
     margin-top: 23px;
 }
+
+m-share-menu{
+    width: 100%;
+    position: relative;
+    display: flex;
+}
